# ros2-asimo-walker

./: .gitignore  AGENTS.md  instruc.md  readme.md
install/: local_setup.sh  setup.sh
install/robot_simulation_experiment/lib/robot_simulation_experiment/: asimo_style_zmp_walker  control_eye_in_hand_ros2.py  human_walking_stable_step_ros2.py  humanoid_walk_only_ros2.py
install/robot_simulation_experiment/lib/robot_simulation_experiment/asimo_walker/: __init__.py  contact_state_machine.py  footstep_planner.py  zmp_preview.py  zmp_reference.py
install/robot_simulation_experiment/share/ament_index/resource_index/parent_prefix_path/: robot_simulation_experiment
install/robot_simulation_experiment/share/robot_simulation_experiment/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/robot_simulation_experiment/: CMakeLists.txt  package.xml
src/robot_simulation_experiment/scripts/: test.py
src/robot_simulation_experiment/scripts/asimo_walker/: common.py  contact_state_machine.py  footstep_planner.py  leg_ik.py  main.py  stabilizer.py  swing_foot.py  teleop_command.py  teleop_gui.py  teleop_profiles.py  zmp_reference.py
tutorial/: asimo_walker_code_reading_guide.md  com_planner_notes.md  footstep_planner_notes.md  leg_ik_notes.md  locomotion_technical_notes_index.md  stabilizer_notes.md  walker_function_link_map.md  zmp_reference_notes.md
